[package]
name = "safe-bump"
version = "0.1.0"
authors = ["Yuriy Krasilnikov <YuriyKrasilnikov@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/YuriyKrasilnikov/safe-bump"
homepage = "https://github.com/YuriyKrasilnikov/safe-bump"
documentation = "https://docs.rs/safe-bump"
readme = "README.md"
description = "Safe bump-pointer arena allocator — zero unsafe, auto Drop, checkpoint/rollback"
categories = ["memory-management", "data-structures"]
keywords = ["arena", "allocator", "bump", "memory", "safe"]
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
