[package]
name = "safe-bump"
version = "0.2.1"
authors = ["Yuriy Krasilnikov <YuriyKrasilnikov@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/YuriyKrasilnikov/safe-bump"
homepage = "https://github.com/YuriyKrasilnikov/safe-bump"
documentation = "https://docs.rs/safe-bump"
readme = "README.md"
description = "Safe typed arena — zero unsafe, auto Drop, checkpoint/rollback, single-thread Arena + concurrent SharedArena"
categories = ["memory-management", "data-structures"]
keywords = ["arena", "allocator", "bump", "memory", "safe"]
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

[dev-dependencies]
proptest = "1.10.0"
